// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Criterion directly renders comments_html 1`] = `"<div>I award you <b>no</b> points, and may God have mercy on your soul.</div>"`;

exports[`Free-form Rubric when assessing with a custom criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\" />
  </ModalBody>
</Modal>"
`;

exports[`Free-form Rubric when assessing with a custom criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Description of criterion
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescriptionDialog close={[Function]} longDescription=\\"\\" open={false} />
    </div>
  </th>
  <td className=\\"ratings\\">
    <FreeFormComments comments=\\"\\" saveLater={false} savedComments={{...}} setSaveLater={[Function]} setComments={[Function]} />
  </td>
  <td>
    <Points assessing={true} onPointChange={[Function]} points={0} pointsPossible={8} pointsText={{...}} />
  </td>
</tr>"
`;

exports[`Free-form Rubric when assessing with a outcome criterion renders the LongDescription sub-component(s) as expected 1`] = `
"<Button fluidWidth={true} variant=\\"link\\" onClick={[Function]} as=\\"button\\" type=\\"button\\" size=\\"medium\\" margin=\\"0\\" buttonRef={[Function]}>
  <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
    view longer description
  </Text>
</Button>"
`;

exports[`Free-form Rubric when assessing with a outcome criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\">
      sa Sivert.
    </Text>
  </ModalBody>
</Modal>"
`;

exports[`Free-form Rubric when assessing with a outcome criterion renders the OutcomeIcon sub-component(s) as expected 1`] = `
"<span>
  <IconOutcomes />
   
  <ScreenReaderContent as=\\"span\\">
    This criterion is linked to a Learning Outcome
  </ScreenReaderContent>
</span>"
`;

exports[`Free-form Rubric when assessing with a outcome criterion renders the Threshold sub-component(s) as expected 1`] = `
"<Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
  threshold: 3.0
</Text>"
`;

exports[`Free-form Rubric when assessing with a outcome criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <OutcomeIcon />
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Javel, Isak hadde ogsaa lauvet kraftig og hadde nu en Mængde Lauv av bedste Slag.
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescription showLongDescription={[Function]} />
      <LongDescriptionDialog close={[Function]} longDescription=\\"sa Sivert.\\" open={false} />
    </div>
    <Threshold threshold={3} />
  </th>
  <td className=\\"ratings\\">
    <FreeFormComments comments=\\"I award you no points, and may God have mercy on your soul.\\" saveLater={false} savedComments={{...}} setSaveLater={[Function]} setComments={[Function]} />
  </td>
  <td>
    <Points assessing={true} onPointChange={[Function]} points={0} pointsPossible={3} pointsText={{...}} />
  </td>
</tr>"
`;

exports[`Free-form Rubric with a custom criterion renders the Comments sub-component(s) as expected 1`] = `
"<div className=\\"rubric-freeform\\">
  <Text size=\\"x-small\\" weight=\\"normal\\" as=\\"span\\" letterSpacing=\\"normal\\" />
</div>"
`;

exports[`Free-form Rubric with a custom criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\" />
  </ModalBody>
</Modal>"
`;

exports[`Free-form Rubric with a custom criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Description of criterion
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescriptionDialog close={[Function]} longDescription=\\"\\" open={false} />
    </div>
  </th>
  <td className=\\"ratings\\">
    <Comments assessment={{...}} freeForm={true} />
  </td>
  <td>
    <Points assessing={false} onPointChange={{...}} points={0} pointsPossible={8} pointsText={{...}} />
  </td>
</tr>"
`;

exports[`Free-form Rubric with a outcome criterion renders the Comments sub-component(s) as expected 1`] = `
"<div className=\\"rubric-freeform\\">
  <Text size=\\"x-small\\" weight=\\"normal\\" as=\\"span\\" letterSpacing=\\"normal\\">
    <div dangerouslySetInnerHTML={{...}} />
  </Text>
</div>"
`;

exports[`Free-form Rubric with a outcome criterion renders the LongDescription sub-component(s) as expected 1`] = `
"<Button fluidWidth={true} variant=\\"link\\" onClick={[Function]} as=\\"button\\" type=\\"button\\" size=\\"medium\\" margin=\\"0\\" buttonRef={[Function]}>
  <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
    view longer description
  </Text>
</Button>"
`;

exports[`Free-form Rubric with a outcome criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\">
      sa Sivert.
    </Text>
  </ModalBody>
</Modal>"
`;

exports[`Free-form Rubric with a outcome criterion renders the OutcomeIcon sub-component(s) as expected 1`] = `
"<span>
  <IconOutcomes />
   
  <ScreenReaderContent as=\\"span\\">
    This criterion is linked to a Learning Outcome
  </ScreenReaderContent>
</span>"
`;

exports[`Free-form Rubric with a outcome criterion renders the Threshold sub-component(s) as expected 1`] = `
"<Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
  threshold: 3.0
</Text>"
`;

exports[`Free-form Rubric with a outcome criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <OutcomeIcon />
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Javel, Isak hadde ogsaa lauvet kraftig og hadde nu en Mængde Lauv av bedste Slag.
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescription showLongDescription={[Function]} />
      <LongDescriptionDialog close={[Function]} longDescription=\\"sa Sivert.\\" open={false} />
    </div>
    <Threshold threshold={3} />
  </th>
  <td className=\\"ratings\\">
    <Comments assessment={{...}} freeForm={true} />
  </td>
  <td>
    <Points assessing={false} onPointChange={{...}} points={0} pointsPossible={3} pointsText={{...}} />
  </td>
</tr>"
`;

exports[`Point Rubric when assessing with a custom criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\" />
  </ModalBody>
</Modal>"
`;

exports[`Point Rubric when assessing with a custom criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Description of criterion
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescriptionDialog close={[Function]} longDescription=\\"\\" open={false} />
    </div>
  </th>
  <td className=\\"ratings\\">
    <Ratings assessing={true} tiers={{...}} onPointChange={[Function]} points={3.2} masteryThreshold={8} />
  </td>
  <td>
    <Points assessing={true} onPointChange={[Function]} points={3.2} pointsPossible={8} pointsText={{...}} />
    <CommentInput comments=\\"i'd like to say some things\\" description=\\"Description of criterion\\" finalize={[Function]} initialize={[Function]} open={false} setComments={[Function]} />
  </td>
</tr>"
`;

exports[`Point Rubric when assessing with a outcome criterion renders the LongDescription sub-component(s) as expected 1`] = `
"<Button fluidWidth={true} variant=\\"link\\" onClick={[Function]} as=\\"button\\" type=\\"button\\" size=\\"medium\\" margin=\\"0\\" buttonRef={[Function]}>
  <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
    view longer description
  </Text>
</Button>"
`;

exports[`Point Rubric when assessing with a outcome criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\">
      sa Sivert.
    </Text>
  </ModalBody>
</Modal>"
`;

exports[`Point Rubric when assessing with a outcome criterion renders the OutcomeIcon sub-component(s) as expected 1`] = `
"<span>
  <IconOutcomes />
   
  <ScreenReaderContent as=\\"span\\">
    This criterion is linked to a Learning Outcome
  </ScreenReaderContent>
</span>"
`;

exports[`Point Rubric when assessing with a outcome criterion renders the Threshold sub-component(s) as expected 1`] = `
"<Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
  threshold: 3.0
</Text>"
`;

exports[`Point Rubric when assessing with a outcome criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <OutcomeIcon />
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Javel, Isak hadde ogsaa lauvet kraftig og hadde nu en Mængde Lauv av bedste Slag.
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescription showLongDescription={[Function]} />
      <LongDescriptionDialog close={[Function]} longDescription=\\"sa Sivert.\\" open={false} />
    </div>
    <Threshold threshold={3} />
  </th>
  <td className=\\"ratings\\">
    <Ratings assessing={true} tiers={{...}} onPointChange={[Function]} points={3} masteryThreshold={3} />
  </td>
  <td>
    <Points assessing={true} onPointChange={[Function]} points={3} pointsPossible={3} pointsText={{...}} />
    <CommentInput comments=\\"here too\\" description=\\"Javel, Isak hadde ogsaa lauvet kraftig og hadde nu en Mængde Lauv av bedste Slag.\\" finalize={[Function]} initialize={[Function]} open={false} setComments={[Function]} />
  </td>
</tr>"
`;

exports[`Point Rubric with a custom criterion renders the Comments sub-component(s) as expected 1`] = `
"<div className=\\"\\">
  <Text size=\\"x-small\\" weight=\\"light\\" as=\\"span\\" letterSpacing=\\"normal\\">
    i&#39;d like to say some things
  </Text>
</div>"
`;

exports[`Point Rubric with a custom criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\" />
  </ModalBody>
</Modal>"
`;

exports[`Point Rubric with a custom criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Description of criterion
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescriptionDialog close={[Function]} longDescription=\\"\\" open={false} />
    </div>
    <div className=\\"assessment-comments\\">
      <Text size=\\"x-small\\" weight=\\"normal\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Instructor Comments
      </Text>
      <Comments assessment={{...}} freeForm={false} />
    </div>
  </th>
  <td className=\\"ratings\\">
    <Ratings assessing={false} tiers={{...}} onPointChange={[Function]} points={3.2} masteryThreshold={8} />
  </td>
  <td>
    <Points assessing={false} onPointChange={{...}} points={3.2} pointsPossible={8} pointsText={{...}} />
  </td>
</tr>"
`;

exports[`Point Rubric with a outcome criterion renders the Comments sub-component(s) as expected 1`] = `
"<div className=\\"\\">
  <Text size=\\"x-small\\" weight=\\"light\\" as=\\"span\\" letterSpacing=\\"normal\\">
    here too
  </Text>
</div>"
`;

exports[`Point Rubric with a outcome criterion renders the LongDescription sub-component(s) as expected 1`] = `
"<Button fluidWidth={true} variant=\\"link\\" onClick={[Function]} as=\\"button\\" type=\\"button\\" size=\\"medium\\" margin=\\"0\\" buttonRef={[Function]}>
  <Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
    view longer description
  </Text>
</Button>"
`;

exports[`Point Rubric with a outcome criterion renders the LongDescriptionDialog sub-component(s) as expected 1`] = `
"<Modal open={false} onDismiss={[Function]} size=\\"medium\\" label=\\"Criterion Long Description\\" shouldCloseOnDocumentClick={true} transition=\\"fade\\" onOpen={[Function]} onClose={[Function]} onEnter={[Function]} onEntering={[Function]} onEntered={[Function]} onExit={[Function]} onExiting={[Function]} onExited={[Function]} mountNode={{...}} insertAt=\\"bottom\\" liveRegion={{...}} contentRef={[Function]} shouldReturnFocus={true} defaultFocusElement={{...}}>
  <ModalHeader>
    <CloseButton placement=\\"end\\" offset=\\"medium\\" variant=\\"icon\\" onClick={[Function]} buttonRef={[Function]} size=\\"small\\" margin=\\"0\\">
      Close
    </CloseButton>
    <Heading border=\\"none\\" color=\\"inherit\\" level=\\"h2\\" ellipsis={false}>
      Criterion Long Description
    </Heading>
  </ModalHeader>
  <ModalBody padding=\\"medium\\" as=\\"div\\">
    <Text lineHeight=\\"double\\" as=\\"span\\" size=\\"medium\\" letterSpacing=\\"normal\\">
      sa Sivert.
    </Text>
  </ModalBody>
</Modal>"
`;

exports[`Point Rubric with a outcome criterion renders the OutcomeIcon sub-component(s) as expected 1`] = `
"<span>
  <IconOutcomes />
   
  <ScreenReaderContent as=\\"span\\">
    This criterion is linked to a Learning Outcome
  </ScreenReaderContent>
</span>"
`;

exports[`Point Rubric with a outcome criterion renders the Threshold sub-component(s) as expected 1`] = `
"<Text size=\\"x-small\\" as=\\"span\\" letterSpacing=\\"normal\\">
  threshold: 3.0
</Text>"
`;

exports[`Point Rubric with a outcome criterion renders the root component as expected 1`] = `
"<tr className=\\"rubric-criterion\\">
  <th scope=\\"row\\" className=\\"description-header\\">
    <div className=\\"description container\\">
      <OutcomeIcon />
      <Text size=\\"small\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Javel, Isak hadde ogsaa lauvet kraftig og hadde nu en Mængde Lauv av bedste Slag.
      </Text>
    </div>
    <div className=\\"long-description\\">
      <LongDescription showLongDescription={[Function]} />
      <LongDescriptionDialog close={[Function]} longDescription=\\"sa Sivert.\\" open={false} />
    </div>
    <Threshold threshold={3} />
    <div className=\\"assessment-comments\\">
      <Text size=\\"x-small\\" weight=\\"normal\\" as=\\"span\\" letterSpacing=\\"normal\\">
        Instructor Comments
      </Text>
      <Comments assessment={{...}} freeForm={false} />
    </div>
  </th>
  <td className=\\"ratings\\">
    <Ratings assessing={false} tiers={{...}} onPointChange={[Function]} points={3} masteryThreshold={3} />
  </td>
  <td>
    <Points assessing={false} onPointChange={{...}} points={3} pointsPossible={3} pointsText={{...}} />
  </td>
</tr>"
`;
